clean code prettier